[gd_scene load_steps=64 format=3 uid="uid://bbq3nlxfivkdc"]

[ext_resource type="Shader" path="res://kitten.gdshader" id="1_vhh2l"]
[ext_resource type="Texture2D" uid="uid://b5leio6xi4spq" path="res://sprites/kitty.png" id="1_w5i4k"]
[ext_resource type="Texture2D" uid="uid://c6ijakyky4rhx" path="res://sprites/cat_wider.png" id="2_e2bns"]
[ext_resource type="Script" path="res://kitty_animation.gd" id="2_pjl4c"]
[ext_resource type="Script" path="res://state_logic/StateMachine.gd" id="3_xbi2p"]
[ext_resource type="Script" path="res://state_logic/IdleState.gd" id="4_v78x8"]
[ext_resource type="Script" path="res://state_logic/HibernateState.gd" id="5_eoqxy"]
[ext_resource type="Script" path="res://state_logic/WalkingState.gd" id="6_418n6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_84bpq"]
shader = ExtResource("1_vhh2l")

[sub_resource type="AtlasTexture" id="AtlasTexture_3dfcx"]
atlas = ExtResource("1_w5i4k")
region = Rect2(672, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlrby"]
atlas = ExtResource("1_w5i4k")
region = Rect2(696, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqnyo"]
atlas = ExtResource("1_w5i4k")
region = Rect2(720, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdxyp"]
atlas = ExtResource("1_w5i4k")
region = Rect2(744, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg1iy"]
atlas = ExtResource("1_w5i4k")
region = Rect2(768, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw8n5"]
atlas = ExtResource("1_w5i4k")
region = Rect2(792, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjrco"]
atlas = ExtResource("1_w5i4k")
region = Rect2(816, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sni6f"]
atlas = ExtResource("1_w5i4k")
region = Rect2(840, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp5da"]
atlas = ExtResource("1_w5i4k")
region = Rect2(864, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaxey"]
atlas = ExtResource("1_w5i4k")
region = Rect2(888, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o3yk"]
atlas = ExtResource("1_w5i4k")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h38va"]
atlas = ExtResource("1_w5i4k")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_benpw"]
atlas = ExtResource("1_w5i4k")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e33s1"]
atlas = ExtResource("1_w5i4k")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt4wp"]
atlas = ExtResource("1_w5i4k")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipln5"]
atlas = ExtResource("1_w5i4k")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nnbt"]
atlas = ExtResource("1_w5i4k")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ty22"]
atlas = ExtResource("1_w5i4k")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho0yo"]
atlas = ExtResource("1_w5i4k")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_etrk0"]
atlas = ExtResource("1_w5i4k")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktpj4"]
atlas = ExtResource("1_w5i4k")
region = Rect2(240, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh72j"]
atlas = ExtResource("1_w5i4k")
region = Rect2(264, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5juh"]
atlas = ExtResource("1_w5i4k")
region = Rect2(288, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_deqda"]
atlas = ExtResource("1_w5i4k")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i84m5"]
atlas = ExtResource("1_w5i4k")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_miexe"]
atlas = ExtResource("1_w5i4k")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o1lf"]
atlas = ExtResource("1_w5i4k")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_td08x"]
atlas = ExtResource("1_w5i4k")
region = Rect2(408, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5lnr"]
atlas = ExtResource("1_w5i4k")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w52fa"]
atlas = ExtResource("1_w5i4k")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmmng"]
atlas = ExtResource("1_w5i4k")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_00swl"]
atlas = ExtResource("1_w5i4k")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_phowj"]
atlas = ExtResource("1_w5i4k")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_egfah"]
atlas = ExtResource("1_w5i4k")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu07p"]
atlas = ExtResource("1_w5i4k")
region = Rect2(576, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_la5nd"]
atlas = ExtResource("1_w5i4k")
region = Rect2(600, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn16v"]
atlas = ExtResource("1_w5i4k")
region = Rect2(624, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaxiw"]
atlas = ExtResource("1_w5i4k")
region = Rect2(648, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhpxb"]
atlas = ExtResource("2_e2bns")
region = Rect2(160, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkfsg"]
atlas = ExtResource("2_e2bns")
region = Rect2(192, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gkge"]
atlas = ExtResource("2_e2bns")
region = Rect2(0, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrmwx"]
atlas = ExtResource("2_e2bns")
region = Rect2(32, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q82a5"]
atlas = ExtResource("2_e2bns")
region = Rect2(64, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0akfj"]
atlas = ExtResource("2_e2bns")
region = Rect2(96, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv8fu"]
atlas = ExtResource("2_e2bns")
region = Rect2(128, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoa87"]
atlas = ExtResource("1_w5i4k")
region = Rect2(1104, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_86xgx"]
atlas = ExtResource("1_w5i4k")
region = Rect2(1128, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jny65"]
atlas = ExtResource("1_w5i4k")
region = Rect2(1152, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lj52"]
atlas = ExtResource("1_w5i4k")
region = Rect2(1176, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_173bp"]
atlas = ExtResource("1_w5i4k")
region = Rect2(1200, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_du6ms"]
atlas = ExtResource("1_w5i4k")
region = Rect2(1224, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyg8y"]
atlas = ExtResource("1_w5i4k")
region = Rect2(1248, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_6fitf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dfcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlrby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqnyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdxyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg1iy")
}],
"loop": true,
"name": &"idle1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw8n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjrco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sni6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp5da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaxey")
}],
"loop": false,
"name": &"idle_to_lying_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o3yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h38va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_benpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e33s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt4wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipln5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nnbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ty22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho0yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etrk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktpj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh72j")
}],
"loop": true,
"name": &"lying_idle1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5juh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deqda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i84m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miexe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o1lf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td08x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5lnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w52fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmmng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00swl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phowj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egfah")
}],
"loop": true,
"name": &"lying_idle2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu07p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la5nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn16v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaxiw")
}],
"loop": false,
"name": &"lying_idle_to_sleep",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhpxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkfsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gkge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrmwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q82a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0akfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv8fu")
}],
"loop": true,
"name": &"running",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoa87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86xgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jny65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lj52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_173bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du6ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyg8y")
}],
"loop": true,
"name": &"walking",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o1vts"]
radius = 4.0
height = 14.0

[node name="Kitten" type="CharacterBody2D"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_84bpq")
sprite_frames = SubResource("SpriteFrames_6fitf")
animation = &"running"
autoplay = "lying_idle1"
script = ExtResource("2_pjl4c")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -39)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("3_xbi2p")
state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("4_v78x8")
hibernateTimeout = 12.0
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="HibernateState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("5_eoqxy")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="WalkingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("6_418n6")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o1vts")

[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/IdleState" method="_on_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="StateMachine/IdleState" method="_on_animation_looped"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="StateMachine/HibernateState" method="_on_animation_looped"]
